[gd_scene load_steps=3 format=3 uid="uid://bpx03kqhd0ag1"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_vjm3y"]
[ext_resource type="PackedScene" uid="uid://crsx4wa7qfy2d" path="res://menu/settings.tscn" id="2_i4v7p"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_vjm3y")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -23.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="RichTextLabel" parent="GUI/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Play[/center]"
fit_content = true

[node name="Settings" type="RichTextLabel" parent="GUI/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Settings[/center]"
fit_content = true

[node name="Exit" type="RichTextLabel" parent="GUI/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Exit[/center]"
fit_content = true

[node name="Settings" parent="." instance=ExtResource("2_i4v7p")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 160.0
offset_top = 120.0
offset_right = 160.0
offset_bottom = 120.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="gui_input" from="GUI/VBoxContainer/Play" to="." method="_on_play_gui_input"]
[connection signal="gui_input" from="GUI/VBoxContainer/Settings" to="." method="_on_settings_gui_input"]
[connection signal="gui_input" from="GUI/VBoxContainer/Exit" to="." method="_on_exit_gui_input"]
